--- a/stack-be/package.json
+++ b/stack-be/package.json
@@ -30,6 +30,7 @@
     "http-errors": "~1.6.3",
     "immer": "^10.0.2",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "mongoose": "^7.2.2",
     "morgan": "~1.9.1",
