--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,10 +15,10 @@ services:
     volumes:
         - my-datavolume:/var/lib/mysql        
     environment:
-        MYSQL_ROOT_USER: root
-        MYSQL_ROOT_PASSWORD: dreamerly@246
-        MYSQL_DATABASE: my_dreamerly
-        MYSQL_ROOT_HOST: '%'  
+        - MYSQL_ROOT_USER:root
+        - MYSQL_ROOT_PASSWORD:dreamerly@246
+        - MYSQL_DATABASE:my_dreamerly
+        - MYSQL_ROOT_HOST:'%'  
     ports:
       - 3307:3306  
   backend:
@@ -28,8 +28,8 @@ services:
     build: 
       context: ./stack-be
     environment:        
-      - DATABASE_PORT=3307   
-      - HOST=host.docker.internal
+      - DATABASE_PORT:3307   
+      - HOST:host.docker.internal
     ports:
       - 8000:8000
 volumes:
