--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,7 @@
+version: '3'
+networks:
+  dreamerly_network:
+    driver: bridge
 services:
   nginx:
     container_name: nginx_my_dreamerly    
@@ -6,6 +10,8 @@ services:
       context: ./stack-fe      
     ports:
       - 3000:80
+    networks:
+      - dreamerly_network
     volumes:
       - ./nginx/config/default.conf:/etc/nginx/conf.d/default.conf       
   mysqldb:    
@@ -21,6 +27,8 @@ services:
         - MYSQL_ROOT_HOST:'%'  
     ports:
       - 3307:3306  
+    networks:
+      - dreamerly_network
   backend:
     depends_on:
       - mysqldb
@@ -32,6 +40,8 @@ services:
       - HOST:host.docker.internal
     ports:
       - 8000:8000
+    networks:
+      - dreamerly_network
 volumes:
   my-datavolume:
 # docker compose -p my-dreamerly up -d
