--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: '3'
 networks:
-  dreamerly_network:
+  bridge:
     driver: bridge
 services:
   nginx:
     container_name: nginx_my_dreamerly    
     restart: always
     build:       
-      context: ./stack-fe      
+      context: ./stack-fe 
     ports:
       - 3000:80
     networks:
-      - dreamerly_network
+      - bridge         
     volumes:
       - ./nginx/config/default.conf:/etc/nginx/conf.d/default.conf       
   mysqldb:    
@@ -19,29 +19,29 @@ services:
     restart: unless-stopped
     container_name: mysqldb_my_dreamerly          
     volumes:
-        - my-datavolume:/var/lib/mysql        
+        - my-datavolume:/var/lib/mysql    
+    ports:
+      - 3307:3306
+    networks:
+      - bridge   
     environment:
         - MYSQL_ROOT_USER:root
         - MYSQL_ROOT_PASSWORD:dreamerly@246
         - MYSQL_DATABASE:my_dreamerly
-        - MYSQL_ROOT_HOST:'%'  
-    ports:
-      - 3307:3306  
-    networks:
-      - dreamerly_network
+        - MYSQL_ROOT_HOST:'%'              
   backend:
     depends_on:
       - mysqldb
     container_name: backend_my_dreamerly  
     build: 
       context: ./stack-be
+    ports:
+      - 7000:8000
+    networks:
+      - bridge
     environment:        
       - DATABASE_PORT:3307   
-      - HOST:host.docker.internal
-    ports:
-      - 8000:8000
-    networks:
-      - dreamerly_network
+      - HOST:host.docker.internal    
 volumes:
   my-datavolume:
 # docker compose -p my-dreamerly up -d
