--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,8 @@ services:
         - MYSQL_ROOT_USER:root
         - MYSQL_ROOT_PASSWORD:dreamerly@246
         - MYSQL_DATABASE:my_dreamerly
-        - MYSQL_ROOT_HOST:'%'              
+        - MYSQL_ROOT_HOST:'%'   
+    command: --default-authentication-plugin=mysql_native_password           
   backend:
     depends_on:
       - mysqldb
