--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,26 +9,26 @@ services:
     build:       
       context: ./stack-fe 
     ports:
-      - 3000:80
+      - 3000:80 
     networks:
-      - bridge         
+      - bridge   
     volumes:
       - ./nginx/config/default.conf:/etc/nginx/conf.d/default.conf       
   mysqldb:    
-    image: mysql:5.7
-    restart: unless-stopped
-    container_name: mysqldb_my_dreamerly          
+    image: mysql:5.7       
+    container_name: mysqldb_my_dreamerly   
+    environment:
+      - MYSQL_ROOT_USER:root
+      - MYSQL_ROOT_PASSWORD:dreamerly@246
+      - MYSQL_DATABASE:my_dreamerly        
+    command: --init-file /data/application/my-dreamerly.sql 
     volumes:
-        - my-datavolume:/var/lib/mysql    
-    ports:
-      - 3307:3306
+        - my-datavolume:/var/lib/mysql
+        - ./my-dreamerly.sql:/data/application/my-dreamerly.sql 
     networks:
       - bridge   
-    environment:
-        - MYSQL_ROOT_USER:root
-        - MYSQL_ROOT_PASSWORD:dreamerly@246
-        - MYSQL_DATABASE:my_dreamerly
-        - MYSQL_ROOT_HOST:'%'       
+    ports:
+      - 4407:3306        
   backend:
     depends_on:
       - mysqldb
@@ -36,11 +36,11 @@ services:
     build: 
       context: ./stack-be
     ports:
-      - 7000:8000
+      - 7000:8000    
     networks:
-      - bridge
+      - bridge   
     environment:        
-      - DATABASE_PORT:3307   
+      - DATABASE_PORT:4407   
       - HOST:host.docker.internal    
 volumes:
   my-datavolume:
