--- a/stack-be/.env
+++ b/stack-be/.env
@@ -1,6 +1,7 @@
-PORT=7001
+PORT_DEV=7001
+PORT_PRODUCTION=7000
 DB_HOST=localhost
 DB_NAME=my_dreamerly
 DB_USERNAME=root
-DB_PASSWORD=dreamerly@246
+DB_PASSWORD=dreamerly246
 DB_PORT=3307
