--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,35 @@ services:
     ports:
       - 3000:80 
     networks:
-      - bridge       
+      - bridge   
+    volumes:
+      - ./nginx/config/default.conf:/etc/nginx/conf.d/default.conf       
+  mysqldb:    
+    image: mysql:5.7       
+    container_name: mysqldb_my_dreamerly   
+    environment:
+      MYSQL_ROOT_USER: root
+      MYSQL_ROOT_PASSWORD: dreamerly246
+      MYSQL_DATABASE: my_dreamerly         
+    volumes:
+        - my-datavolume:/var/lib/mysql        
+    networks:
+      - bridge   
+    ports:
+      - 3307:3306        
+  backend:
+    depends_on:
+      - mysqldb
+    container_name: backend_my_dreamerly  
+    build: 
+      context: ./stack-be
+    ports:
+      - 7000:8000    
+    networks:
+      - bridge   
+    environment:        
+      - DATABASE_PORT:3307   
+      - HOST:host.docker.internal    
 volumes:
   my-datavolume:
 # docker compose -p my-dreamerly up -d
